@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-08T16:28:22Z",
-  "count" : 4,
-  "count_minmax" : [ 3, 4 ],
-  "count_decinc" : [ -0, +4 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2022-07-09T01:17:31Z",
+  "count" : 6,
+  "count_minmax" : [ 3, 6 ],
+  "count_decinc" : [ -0, +6 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
 }
