@@ -1,6 +1,6 @@
 {
-  "count": 6,
-  "uniques": 3,
+  "count": 8,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2022-07-01T00:00:00Z",
@@ -14,8 +14,8 @@
     },
     {
       "timestamp": "2022-07-08T00:00:00Z",
-      "count": 4,
-      "uniques": 1
+      "count": 6,
+      "uniques": 2
     }
   ]
 }
